sintaxisPy.ATG
using Transdiagramdorfinal.Semantica;
using System.Collections.Generic;


COMPILER sintaxisPy

    public TablaClases tabla = new TablaClases();

CHARACTERS
  letra = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz" .
  digito  = "0123456789" .
  espacio = ' ' + '\t' .
  saltoLinea = '\n' + '\r' .
  carCadena  = letra + digito + espacio + '.' + ',' + ':' .

TOKENS
  identificador = letra { letra | digito | "_" } .
  numero = digito { digito } .
  cadenaCh = '"' { carCadena } '"' .
  nuevaLinea = saltoLinea {saltoLinea} .
  LBRACE = "{" .
  RBRACE = "}" .
  def = "def" .
  self = "self" .
  return = "return" .
  pass = "pass" .


IGNORE espacio 

PRODUCTIONS
  sintaxisPy = {DeclaracionClase [nuevaLinea]} EOF.

  DeclaracionClase = "class" identificador (. string nombreClase = t.val; tabla.NuevaClase(nombreClase);.) [ "(" identificador (. string claseBase = t.val; tabla.AgregarHerencia(claseBase);.) { "," identificador (. string claseBase2 = t.val; tabla.AgregarHerencia(claseBase2);.) } ")" ] ":" nuevaLinea LBRACE [nuevaLinea]  DefinicionConstructor nuevaLinea {DefinicionFuncion [nuevaLinea]} [nuevaLinea] RBRACE .

  DefinicionConstructor = def "__init__" "(" self [ "," identificador ["=" identificador] { "," identificador ["=" identificador] } ] ")" ":" nuevaLinea LBRACE [nuevaLinea] [DefinicionSuperConstructor nuevaLinea] {DefinicionAtributo nuevaLinea} [nuevaLinea] RBRACE .

  DefinicionSuperConstructor = "super().__init__" "(" [ identificador { "," identificador } ] ")".

  DefinicionAtributo = "self." identificador (.string nombreAtr = t.val; tabla.AgregarAtributo(nombreAtr); .) "=" (identificador | "[]" | "None" ) .

  DefinicionAtributo = "self." identificador (.string nombreAtr = t.val;string tipoRel = "Desconocido"; string tipoAtrib = "Desconocido"; tabla.AgregarAtributo(nombreAtr); .) "=" 
  (identificador (. string claseDest = t.val;
             if (tabla.BuscarClase(claseDest) != null) {
               tipoRel = "Asociacion";
               tipoAtrib = claseDest;
               char primerCaracterMayuscula = char.ToUpper(claseDest[0]);
               string restoDeCadena = claseDest.Substring(1);
               string nombreCorregido = primerCaracterMayuscula + restoDeCadena;
               tabla.AgregarRelacion(tabla.ClaseActual.Nombre, primerCaracterMayuscula + restoDeCadena, tipoRel);
           }.)
  | "[]" | "None" ) .

  Sentencia = ["self."] identificador (Asignacion | LlmadaFuncionClase) | pass | return [Expresion] .

  LlmadaFuncionClase = "." identificador "(" (self | identificador) { "," (self | identificador) } ")" .

  Asignacion = "=" identificador .

  Expresion = Term [ ( "+" | "-" | ">=" | "<=" | ">" | "<" | "==" ) Term ]  .  // Expandida para operadores

  Term = numero | cadenaCh | "None" | "self." identificador .



END sintaxisPy.
